@@ -2,6 +2,8 @@
   * Release ImageMagick version 6.9.10-77, GIT revision 15073:5c92edb:20191128.
 
 2019-11-26  6.9.10-77 Cristy  <quetzlzacatenango@image...>
+  * Support Pocketmod image format, e.g.
+    convert -density 300 pages?.pdf pocketmod:organize.pdf
   * Fixed numerous issues  posted to GitHub (reference
     https://github.com/ImageMagick/ImageMagick/issues).
   * Update documentation.
